# Alia

./: .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs
src/args_parsing/: args_parser.rs
src/config_parsing/: config_parser.rs
src/string_parsing/: string_parser.rs
src/util/: constants.rs  macros.rs  misc_extension_traits.rs
