[package]
name = "alia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.log]
version = "*"
features = ["max_level_trace", "release_max_level_off"]

[dependencies.simple_logger]
default-features = false
features = ["colors"]
version = "*"